--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -31,6 +31,7 @@
   .homepage-component-wrapper {
     width: 100%;
     border: 1px solid red;
+    position: relative;
     padding: 70px 150px;
 
     @media (max-width: 1200px) {
