--- a/client/src/Components/Contact/ContactIntro/ContactIntro.scss
+++ b/client/src/Components/Contact/ContactIntro/ContactIntro.scss
@@ -9,22 +9,24 @@
 
 .contact {
   position: relative;
-  min-height: 100vh;
-  background: url("/your-bg-image.jpg") center/cover no-repeat;
-  color: var(--light);
+  height: calc(100vh - 100px);
+  margin-top: 100px; 
+  color: var(--primary-color);
   padding: 4rem 6%;
   display: flex;
   align-items: center;
 
   &__overlay {
-    position: absolute;
-    inset: 0;
-    background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.85),
-      rgba(0, 0, 0, 0.4)
-    );
-    z-index: 1;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../../../Assets/water.webp") center/cover no-repeat;
+
+  filter: brightness(0.35);
+
   }
 
   &__content {
@@ -34,6 +36,7 @@
     grid-template-columns: 1.2fr 1fr;
     gap: 3rem;
     width: 100%;
+    font-family: var(--ubuntu);
   }
 
   &__badge {
@@ -51,13 +54,10 @@
     line-height: 1.1;
 
     span {
-      background: linear-gradient(
-        90deg,
-        var(--orange),
-        #00e5ff
-      );
+      background: linear-gradient(90deg, var(--orange), #00e5ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+      background-clip: text;
     }
   }
 
@@ -100,7 +100,7 @@
 }
 
 /* INFO CARDS */
-.info-card {
+.info-card-contact {
   display: flex;
   align-items: center;
   gap: 1.2rem;
@@ -108,7 +108,7 @@
   border-radius: 14px;
   position: relative;
 
-  .icon {
+  .info-icon {
     width: 46px;
     height: 46px;
     display: grid;
@@ -155,7 +155,29 @@
 
 /* RESPONSIVE */
 @media (max-width: 900px) {
+  .contact {
+    height: calc(120vh - 100px);
+  }
   .contact__content {
     grid-template-columns: 1fr;
   }
+  .contact__actions {
+    flex-direction: row;
+  }
+  .info-card-contact {
+    padding: 0.5rem 12px;
+  }
+}
+@media (max-width: 400px) {
+   .contact {
+    height: calc(130vh - 100px);
+  }
+  
+}
+
+@media (max-width: 350px) {
+   .contact {
+    height: calc(140vh - 100px);
+  }
+  
 }
