--- a/client/src/Components/Contact/Form/Form.scss
+++ b/client/src/Components/Contact/Form/Form.scss
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+.form-header {
+  text-align: center;
+  margin: 2rem 0;
+}
+
 
 .contact-form-container {
   min-height: 100vh;
