--- a/admin/src/components/Messages/Messages.scss
+++ b/admin/src/components/Messages/Messages.scss
@@ -15,12 +15,12 @@
   grid-template-columns: 540px 1fr;
   gap: 20px;
   color: #e4e6eb;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Helvetica", "Arial", sans-serif;
+  font-family:"Roboto", sans-serif;
 }
 
 .messages-list-section {
   display: flex;
+  overflow-y: scroll;
   flex-direction: column;
   overflow-y: scroll;
   border-right: 1px solid #2d3548;
@@ -57,6 +57,7 @@
 
 .message-list {
   flex: 1;
+  max-height:75vh;
   overflow-y: scroll;
 }
 
@@ -136,6 +137,7 @@
 .message-item-email {
   font-size: 13px;
   color: #9ba3b4;
+  font-family: var(--ubuntu);
   margin-bottom: 6px;
 }
 
