--- a/client/src/Components/HomePage/Mission/MissionSection.scss
+++ b/client/src/Components/HomePage/Mission/MissionSection.scss
@@ -4,11 +4,10 @@
 
   &__container {
     max-width: 1200px;
-    margin: auto;
+    margin: 0 auto;
     display: grid;
     grid-template-columns: 1.1fr 0.9fr;
     gap: 3rem;
-    align-items: center;
   }
 
   &__tag {
@@ -26,13 +25,6 @@
     font-size: 48px;
     line-height: 48px;
     font-weight: 700;
-  }
-
-  &__subtitle {
-    font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 1.5rem;
-    line-height: 36px;
   }
 
   p {
