--- a/client/src/Components/About/AboutIntro/AboutIntro.scss
+++ b/client/src/Components/About/AboutIntro/AboutIntro.scss
@@ -58,7 +58,7 @@
   }
 
   p {
-    color: var(--footer-muted-color);
+    color: var(--primary-color);
     line-height: 1.7;
     font-size: 1rem;
   }
