--- a/client/src/Components/About/Timeline/TimeLine.scss
+++ b/client/src/Components/About/Timeline/TimeLine.scss
@@ -68,6 +68,11 @@
   border-radius: 10px;
   max-width: 380px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+ [data-theme="light"]           & {
+    background: var(--black-to-white);
+    color: #000;
+  }
+ 
 
   h3 {
     margin-bottom: 0.5rem;
@@ -80,8 +85,11 @@
     line-height: 1.5;
     font-family: "Inter", sans-serif;
     color: #cbd5e1;
+
+    [data-theme="light"]         & {
+      color: #333;
   }
-}
+}}
 
 @media (max-width: 768px) {
   .timeline__line {
