--- a/client/src/Components/HomePage/Causes/Causes.scss
+++ b/client/src/Components/HomePage/Causes/Causes.scss
@@ -7,6 +7,10 @@
 
 .campaign-card {
   background: var(--primary-color);
+
+  [data-theme="light"] & {
+    background: var(--blue-to-white);
+  }
   height: 415px;
   
   border-radius: 14px;
@@ -50,9 +54,10 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+ 
 
     h3 {
-      color: var(--dark-text);
+      color: black;
       font-size: 20px;
       font-weight: 700;
     }
