--- a/client/src/Components/Theme/Theme.scss
+++ b/client/src/Components/Theme/Theme.scss
@@ -1,7 +1,8 @@
 .theme-toggle {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
+  margin-right: 30px;
   border: none;
   cursor: pointer;
 
@@ -9,7 +10,7 @@
   place-items: center;
 
   background: var(--gray-bg);
-  color: var(--secondary-color);
+  color: var(--primary-color);
 
   transition:
     background 0.25s ease,
@@ -17,7 +18,6 @@
     transform 0.15s ease;
 
   &:hover {
-    transform: translateY(-1px);
     background: var(--light-dark-bg);
   }
 
