--- a/client/src/Components/Volunteer/VolunteerIntro/VolunteerIntro.scss
+++ b/client/src/Components/Volunteer/VolunteerIntro/VolunteerIntro.scss
@@ -40,7 +40,7 @@
       font-size: clamp(1rem, 2.5vw, 1.25rem);
       line-height: 1.6;
       margin-bottom: 2rem;
-      color: var(--primary-color);
+      color: white;
     }
   }
 }
