--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 :root {
+  --nav:#000000ff;
   --primary-color: #f9fafb;
   --secondary-color: rgb(249, 115, 22);
   --background-color: #000000ff;
@@ -9,7 +10,7 @@
   --text-color: #333333;
   --gray-bg: #1e2128b3;
    --action-bg:#1e2128b3;
-  --hero-background-color: #0054a880;
+ --hero-background-color: #0929408a; 
   --bright-blue: #2563eb;
   --dark-blue: #1e3a8a;
   --dark-text: #111827;
@@ -20,45 +21,48 @@
   --light-dark-bg: #1e2128ff;
   --footer-bg: #0054a8ff;
   --ubuntu: "Ubuntu", sans-serif;
-  --bulma-navbar-background-color: transparent;
-
+  --bulma-navbar-background-color:"";
   --blue-to-white:#2563eb;
   --mission-home-text:#d1d5db;
+
+  --dark-to-white: #2c3b58b3;
+
+  --faq-bg : #171A1F;
 }
 
 :root[data-theme="light"]             {
 
-  /* ===== BRAND ===== */
   --primary-color:#000000ff;
-  --secondary-color: #f97316; /* same orange */
+  --secondary-color: #f97316; 
   --bright-blue: #2563eb;
   --blue-color: #1e3a8a;
   --dark-blue: #1e3a8a;
  --action-bg:#FFFFFF;
-  /* ===== BACKGROUNDS ===== */
-  --background-color: #f9fafb; /* page background */
-  --light-dark-bg: #ffffff; /* cards / surfaces */
-  --gray-bg: #FAFAFB; /* soft sections */
-  --hero-background-color: #e0f2fe; /* hero overlay */
-  --footer-bg: #0f172a; /* keep footer dark */
+  --background-color: #f9fafb;
+  --light-dark-bg: #ffffff;
+  --gray-bg: #FAFAFB; 
+  --hero-background-color: #020c13a3; 
+  --footer-bg: #0f172a;
 
-  /* ===== TEXT ===== */
-  --text-color: #111827; /* primary text */
-  --dark-text: #d4daf3; /* headings */
-  --darker-gray: #000; /* muted text */
+  --text-color: #111827; 
+  --dark-text: #d4daf3; 
+  --darker-gray: #000; 
   --footer-text-color: #e5e7eb;
   --footer-muted-color: #94a3b8;
 
-  /* ===== UI ===== */
   --footer-icon-bg: rgba(255, 255, 255, 0.15);
   --ubuntu: "Ubuntu", sans-serif;
-  --bulma-navbar-background-color: transparent;
+  --bulma-navbar-background-color:"";
 
   --black-to-white:#e5e7eb;
 
   --blue-to-white:#e5e7eb;
-
+  --dark-to-white: #ecf0f3;
   --mission-home-text:#000000;
+
+   --faq-bg : #F0F7FF;
+
+   --nav:linear-gradient(108deg,rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.94) 0%, rgba(0, 0, 0, 0.87) 26%, rgba(0, 0, 0, 0.73) 50%, rgba(0, 0, 0, 0.71) 73%, rgba(0, 0, 0, 0.6) 100%);
 }
 
 * {
@@ -90,7 +94,6 @@
 
 .smallHeader__subtitle {
   font-family: var(--ubuntu);
-
   font-size: 14px;
   line-height: 20px;
   font-weight: 600;
@@ -192,4 +195,8 @@
       }
     }
   }
+}
+
+.arrow{
+  color: var(--primary-color);
 }
