--- a/client/src/Components/NavBar/NavBar.scss
+++ b/client/src/Components/NavBar/NavBar.scss
@@ -2,7 +2,7 @@
 
 .navbar {
   height: 100px;
-  background-color: var(--background-color);
+  background: var(--nav);
   position: fixed;
   top: 0;
   width: 100%;
@@ -60,7 +60,7 @@
     }
 
     .navbar-item {
-      color: var(--primary-color);
+      color: whitesmoke;
       text-decoration: none;
       font-size: 1.1rem;
       font-weight: 500;
@@ -122,7 +122,7 @@
     }
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 930px) {
     .navbar-brand {
       width: 100%;
     }
