--- a/client/src/Components/NavBar/NavBar.scss
+++ b/client/src/Components/NavBar/NavBar.scss
@@ -33,7 +33,7 @@
     display: none;
     background: none;
     border: none;
-    color: var(--primary-color);
+    color:white;
     cursor: pointer;
     padding: 0.5rem;
     margin-left: auto;
